fixes post added put and delete
